[gd_scene load_steps=40 format=2]

[ext_resource path="res://Textures/eyeball-pile.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Eyeball.gd" type="Script" id=2]
[ext_resource path="res://Shaders/Shadow.shader" type="Shader" id=3]
[ext_resource path="res://Textures/pointer.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Pointer.gd" type="Script" id=5]
[ext_resource path="res://sounds/meaty.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/walk_mud.wav" type="AudioStream" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=2]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=3]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 73, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=4]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 146, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=5]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 219, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=6]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 292, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=7]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 365, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=8]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 438, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=9]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 511, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=10]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 584, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=11]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 657, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=12]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 730, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=13]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 803, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=14]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 876, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=15]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 949, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=16]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1022, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=17]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1095, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=18]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1168, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=19]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1241, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=20]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1314, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=21]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1387, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=22]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1460, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=23]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1533, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=24]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1606, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=25]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1679, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=26]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1752, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=27]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1825, 0, 73, 52 )

[sub_resource type="AtlasTexture" id=28]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 1898, 0, 73, 52 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": false,
"name": "collected",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=30]
radius = 50.0

[sub_resource type="CircleShape2D" id=31]
radius = 8.0

[sub_resource type="ShaderMaterial" id=32]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[node name="Eyeballs" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.739, -1.12373 )
shape = SubResource( 30 )

[node name="Eyeball" type="Area2D" parent="."]
position = Vector2( 33, 22 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Eyeball"]
position = Vector2( 0, -0.132431 )
shape = SubResource( 31 )

[node name="Pointer" type="Sprite" parent="Eyeball"]
visible = false
material = SubResource( 32 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_Eyeballs_body_entered"]
[connection signal="body_entered" from="Eyeball" to="." method="_on_Eyeball_body_entered"]
[connection signal="body_exited" from="Eyeball" to="." method="_on_Eyeball_body_exited"]
